# CAN-log-reader-Rust

./: .gitignore  BADMAGIC_FIX_COMPLETE.md  CLAUDE.md  CONTAINER_PDU_FIX.md  Cargo.toml  DECODE_LOG_README.md  GITHUB_READY.md  PHASE1_COMPLETE.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  SESSION_12_SUMMARY.md  SIGNAL_DECODING_CONFIRMED.md  Specification.txt  TestOutput.txt  can_log_reader_api.h  example_config.toml  test_arxml.rs  test_arxml_improvements.rs  test_arxml_public_api.rs  test_message_decoder.rs
.claude/: settings.local.json
can-log-cli/: Cargo.toml
can-log-cli/src/: callbacks.rs  config.rs  events.rs  main.rs  report.rs  state.rs
can-log-cli/src/events/: expression.rs  state_machine.rs
can-log-cli/src/report/: html.rs  txt.rs
can-log-decoder/: Cargo.toml  README.md  build.rs
can-log-decoder/examples/: README.md  analyze_blf.rs  decode_log.rs  inspect_blf.rs  test_blf.rs  test_container_decoding.rs  test_hybrid_blf.rs
can-log-decoder/src/: config.rs  container_decoder.rs  decoder.rs  lib.rs  message_decoder.rs  types.rs
can-log-decoder/src/cantp/: mod.rs
can-log-decoder/src/container/: mod.rs
can-log-decoder/src/formats/: blf.rs  blf_extended.rs  blf_hybrid.rs  mf4.rs  mf4_ffi.rs  mod.rs
can-log-decoder/src/signals/: arxml.rs  database.rs  dbc.rs  mod.rs
can-log-decoder/tests/: explore_ablf.rs
releases/v0.1.0-session12/: QUICKSTART.txt  README.md
standalone-tools/: README.txt  USAGE_EXAMPLE.txt
