[workspace]
resolver = "2"
members = [
    "can-log-decoder",
    "can-log-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CAN Log Reader Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies shared across crates
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
ablf = { path = "vendor/ablf" }
