[package]
name = "can-log-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Local dependencies
can-log-decoder = { path = "../can-log-decoder" }

# Workspace dependencies
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
log.workspace = true
env_logger.workspace = true

# CLI-specific dependencies
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
rayon = "1.8"
libloading = "0.8"
